--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 /* Navigation Bar */
 
 #home {
-  background-color:  #7600bc;
+  background-color:  #00313f;
   padding-bottom: 1cm;
   margin-left:-1cm;
   margin-right:-1cm;
@@ -64,7 +64,7 @@ h2 {
   font-size: 50px;
   text-align: center;
   float: left;
-  color: #7600bc;
+  color: #00313f;
   margin: 30px;
   margin-left: 60px;
   margin-top: 40px;
@@ -98,7 +98,7 @@ h2 {
 #about-me h1 {
   font-size: 65px;
   margin-top: 90px;
-  color: #7600bc;
+  color: #00313f;
 }
 
 #about-me p {
@@ -218,7 +218,7 @@ h2 {
 }
 
 .recommendation span {
-  color: #7600bc;
+  color: #00313f;
   font-size: 20px;
   font-family: 'Times New Roman', Times, serif;
 }
@@ -229,7 +229,7 @@ h2 {
   width: 48px;
   height: 48px;
   border-radius: 100%;
-  background-color: #7600bc;
+  background-color: #00313f;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -243,7 +243,7 @@ h2 {
 
 .popup {
   width:400px;
-  background-color: #e8bcf0;
+  background-color: #00b5de;
   border-radius: 3mm;
   top: 50%;
   left:50%;
@@ -260,8 +260,8 @@ h2 {
 
 .popup button {
   background-color: #fff;
-  border: 1px solid #7600bc;
-  color: #7600bc;
+  border: 1px solid #00313f;
+  color: #00313f;
   display: block;
   border-radius: 6px;
   text-align: center;
@@ -274,8 +274,8 @@ h2 {
 
 .popup button:hover {
   background-color: #fff;
-  border: 2px solid #7600bc;
-  color: #7600bc;
+  border: 2px solid #00313f;
+  color: #00313f;
   display: block;
   font-weight: bolder;
   text-align: center;
@@ -306,8 +306,8 @@ fieldset {
 
 button {
   background-color: #fff;
-  border: 1px solid #7600bc;
-  color: #7600bc;
+  border: 1px solid #00313f;
+  color: #00313f;
   display: block;
   border-radius: 6px;
   text-align: center;
@@ -318,8 +318,8 @@ button {
 }
 
 button:hover {
-  background-color: #7600bc;
-  border: 1px solid #7600bc;
+  background-color: #00313f;
+  border: 1px solid #00313f;
   color: #fff;
   display: block;
   border-radius: 6px;
